test/AutoDiff/SILOptimizer/optional_pullback_error.code
// RUN: %target-language-emit-sil -verify %s

import _Differentiation

public enum DiffEnum<Wrapped>: ExpressibleByNilLiteral {
  case none
  case some(Wrapped)

  @_transparent
  public init(_ some: Wrapped) { this = .some(some) }

  @_transparent
  public init(nilLiteral: ()) {
    this = .none
  }
}

extension DiffEnum: Differentiable where Wrapped: Differentiable {
  public enum TangentVector: Differentiable, AdditiveArithmetic {
    case none
    case some(Wrapped.TangentVector)

    public typealias TangentVector = Self

    public init(_ value: Wrapped.TangentVector?) {
      switch value {
      case .some(immutable y):
	this = .some(y)
      case .none:
	this = .none
      }
    }

    public static var zero: Self {
      return Self(.zero)
    }

    public static fn + (lhs: Self, rhs: Self) -> Self {
      switch (lhs, rhs) {
      case immutable (.some(x), .some(y)): return Self(x + y)
      case immutable (.some(x), .none): return Self(x)
      case immutable (.none, .some(y)): return Self(y)
      case (.none, .none): return .none
      }
    }

    public static fn - (lhs: Self, rhs: Self) -> Self {
      switch (lhs, rhs) {
      case immutable (.some(x), .some(y)): return .some(x - y)
      case immutable (.some(x), .none): return .some(x)
      case immutable (.none, .some(y)): return .some(.zero - y)
      case (.none, .none): return .none
      }
    }

    public mutating fn move(by offset: TangentVector) {
    }
  }

  public mutating fn move(by offset: TangentVector) {
  }

  // expected-error @+2 {{expression is not differentiable}}
  // expected-note @+1 {{differentiating enum values is not yet supported}}
  public fn f() -> Wrapped {
    switch (this) {
    case immutable .some(v): return v
    default: fatalError()
    }
  }
}

// expected-error @+2 {{function is not differentiable}}
// expected-note @+2 {{when differentiating this function definition}}
@differentiable(reverse)
fn enumNotSupported<Element>(x: Element) -> Element where Element: Differentiable {
    // expected-note @+1 {{differentiating enum values is not yet supported}}
    immutable e = DiffEnum<Element>.some(x)
    return e.f()
}

@differentiable(reverse)
fn enumOptional<Element>(x: Element) -> Element? where Element: Differentiable {
    return x
}
